<resources>
    <string name="app_name">Water</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_view_qp">ViewQP</string>
    <string name="user">User:</string>
    <string name="user1">User:</string>
    <string name="water_type">Water Type:</string>
    <string name="water_condition">Water Condition:</string>
    <string name="location">location:</string>
    <string name="id">ID:</string>
    <string name="water_condition1">Water Condition:</string>
    <string name="location1">Location:</string>
    <string name="virus_ppm1">Virus PPM:</string>
    <string name="contaminant_ppm1">Contaminant PPM:</string>
    <string name="id1">ID:</string>
    <string name="settings">Settings</string>
    <string name="add_report">ADD REPORT</string>
    <string name="logout">Logout</string>
    <string name="login_successful">Login Successful!</string>
    <string name="map">Map</string>
    <string name="add_qp">Add QP</string>
    <string name="button">Button</string>
    <string name="view_qp">View QP</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="register1">Register</string>
    <string name="login1">Login</string>
    <string name="water">Water</string>
    <string name="login2">Login</string>
    <string name="water1">Water</string>
    <string name="overall_condition">Overall Condition</string>
    <string name="submit">Submit</string>
    <string name="cancel1">BACK</string>
    <string name="please_fill_out_your_desired_information">Please Fill Out Your Desired Information</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="email1">Email</string>
    <string name="register2">Register</string>
    <string name="cancel3">Cancel</string>
    <string name="password2">Password</string>
    <string name="submit1">Submit</string>
    <string name="cancel4">Cancel</string>
    <string name="location2">Location</string>
    <string name="water_condition2">Water Condition</string>
    <string name="water_type2">Water Type</string>
    <string name="welcome_edit_any_text_field_to_change_your_information">Welcome, edit any text field to change your information</string>
    <string name="email3">Email:</string>
    <string name="password3">Password:</string>
    <string name="edit">Edit</string>
    <string name="cancel5">Cancel</string>
    <string name="textview">TextView</string>
    <string name="cancel6">Cancel</string>
    <string name="user8">User:</string>
    <string name="water_condition4">Water Condition:</string>
    <string name="location5">Location:</string>
    <string name="virus_ppm3">Virus PPM:</string>
    <string name="contaminant_ppm4">Contaminant PPM:</string>
    <string name="purityReport">Purity Report</string>
    <string name="qualityReport">Quality Report</string>
    <string name="loginscreen">Login</string>
    <string name="registerscreen">Register</string>
    <string name="userType">Select User Type</string>
    <string name="id5">ID:</string>
    <color name="gray">#303030</color>
    <color name="teal">#92cbc5</color>
    <color name="white">#ffffff</color>
    <color name="clear">#00ffffff</color>
</resources>
