<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:background="@color/gray">
    // Makes table rows with text views in each row
    //
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/user"
            android:padding="3dip"
            android:textColor="@color/white" />
        <TextView
            android:gravity="right"
            android:padding="3dip"
            android:id="@+id/user"
            android:textColor="@color/white" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/water_condition1"
            android:padding="3dip"
            android:textColor="@color/white" />
        <TextView
            android:gravity="right"
            android:padding="3dip"
            android:id="@+id/condition"
            android:textColor="@color/white" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/location1"
            android:padding="3dip"
            android:textColor="@color/white" />
        <TextView
            android:gravity="right"
            android:padding="3dip"
            android:id="@+id/location"
            android:textColor="@color/white" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_column="1"
            android:text="@string/virus_ppm1"
            android:padding="3dip"
            android:textColor="@color/white" />
        <TextView
            android:gravity="right"
            android:padding="3dip"
            android:id="@+id/virus"
            android:textColor="@color/white" />
    </TableRow>
    <TableRow>

        <TextView
            android:layout_column="1"
            android:text="@string/contaminant_ppm1"
            android:padding="3dip"
            android:textColor="@color/white" />
        <TextView
            android:gravity="right"
            android:padding="3dip"
            android:id="@+id/contaminant"
            android:textColor="@color/white" />
    </TableRow>
    <TableRow>

        <TextView
            android:layout_column="1"
            android:text="@string/id1"
            android:padding="3dip"
            android:textColor="@color/white" />
        <TextView
            android:gravity="right"
            android:padding="3dip"
            android:id="@+id/postID"
            android:textColor="@color/white" />
    </TableRow>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/white"/>
</TableLayout>