<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/gray"
    tools:context="com.gitrekt.water.controller.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/loginEmail"
        android:hint="Email"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="93dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/cancelLoginButton"
        android:background="@color/teal"
        android:onClick="cancelLogin"
        android:layout_below="@+id/performLoginButton"
        android:layout_alignLeft="@+id/performLoginButton"
        android:layout_alignStart="@+id/performLoginButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/loginPassword"
        android:hint="Password"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        android:layout_below="@+id/loginEmail"
        android:layout_alignLeft="@+id/loginEmail"
        android:layout_alignStart="@+id/loginEmail" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/performLoginButton"
        android:background="@color/teal"
        android:onClick="performLogin"
        android:layout_below="@+id/loginPassword"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="TextView"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        tools:text="@string/loginscreen"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_height="match_parent"
        android:src="@drawable/cevrons"
        android:layout_width="match_parent"
        android:adjustViewBounds="true"
        android:paddingTop="30dp"
        android:paddingLeft="90dp"
        android:paddingRight="200dp"
        android:paddingBottom="5dp"
        android:scaleType="fitStart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_height="match_parent"
        android:src="@drawable/squares"
        android:layout_width="match_parent"
        android:adjustViewBounds="true"
        android:paddingTop="300dp"
        android:paddingLeft="60dp"
        android:paddingRight="50dp"
        android:paddingBottom="0dp"
        android:scaleType="fitStart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
